--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
 
 <header class="header">
 
-    <a href="#" class="logo">
+    <a href="/" class="logo">
         <img src="images/logo.jpg" alt="">
     </a>
 
@@ -421,7 +421,7 @@
                 <span class="fas fa-phone"></span>
                 <input type="number" placeholder="N U M B E R">
             </div>
-            <input type="submit" value="contact now" class="btn">
+            <input type="" value="contact now" class="btn" id="send-button-contact">
         </form>
         <iframe class="map" src="https://maps.google.com/maps?q=margarita%20maza%20de%20juarz%20168&t=&z=15&ie=UTF8&iwloc=&output=embed" allowfullscreen="" loading="lazy"></iframe>
     </div>
@@ -444,8 +444,6 @@
         <a href="#" class="fab fa-facebook-f"></a>
         <a href="#" class="fab fa-twitter"></a>
         <a href="#" class="fab fa-instagram"></a>
-        <a href="#" class="fab fa-linkedin"></a>
-        <a href="#" class="fab fa-pinterest"></a>
     </div>
 </section>
 
