--- a/views/index.html
+++ b/views/index.html
@@ -33,8 +33,8 @@
     </nav>
 
     <div class="icons">
-        <div class="fas fa-search" id="search-btn"></div>
-        <div class="fas fa-shopping-cart" id="cart-btn"></div>
+        <div class="fas fa-search-plus" id="search-btn"></div>
+        <div class="far fa-caret-square-left" id="cart-btn"></div>
         <div class="fas fa-bars" id="menu-btn"></div>
     </div>
 
