Minor icon changes

--- a/views/index.html
+++ b/views/index.html
@@ -32,7 +32,7 @@
 
     <div class="icons">
         <div class="fas fa-search-plus" id="search-btn"></div>
-        <div class="far fa-caret-square-left" id="cart-btn"></div>
+        <div class="fas fa-shopping-cart" id="cart-btn"></div>
         <div class="fas fa-bars" id="menu-btn"></div>
     </div>
 
@@ -81,11 +81,6 @@
 
 <!-- fin de header-->
 
-<!--<div class="content">
-    <h3>Craft beer as you've never seen it</h3>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat labore, sint cupiditate distinctio tempora reiciendis.</p>
-    <a href="#" class="btn">get yours now</a>
-</div>
 
 
 <!-- hocomienza home  -->
