--- a/public/css/style.css
+++ b/public/css/style.css
@@ -661,10 +661,13 @@ section{
         font-size: 1.5rem;
     }
 
+    .home .content span {
+        font-size: 4.5rem;
+    }
+
 }
 
 @media (max-width:450px){
-
     html{
         font-size: 50%;
     }
