--- a/views/index.html
+++ b/views/index.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">   
-    <title>Craft-Brew</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <title>Craft-Brew</title>
 
 </head>
 
@@ -77,7 +77,14 @@
         <a href="#" class="btn">Checkout</a>
     </div>
 
+    
+
 </header>
+<div class="wave" style="height: 100px;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
+    style="height: 100%; width: 100%;">
+    <path d="M-7.05,45.88 C230.52,-47.86 271.16,153.45 505.92,25.16 L501.97,-1.47 L-1.41,-0.48 Z"
+        style="stroke: none; fill: var(--main-color);"></path>
+</svg></div>
 
 <!-- fin de header-->
 
@@ -464,6 +471,7 @@
         backSpeed: 50,
         loop: true
     });
+
 </script>
 
 
