--- a/public/css/style.css
+++ b/public/css/style.css
@@ -254,10 +254,6 @@ section{
     background-position: center;
 }
 
-.home .test {
-    border: red solid 1px;
-}
-
 .home .content{
     max-width: 60rem;
 }
@@ -265,7 +261,7 @@ section{
 .home .content span {
     font-size: 6rem;
     text-transform: uppercase;
-    color:#fff;
+    color:#CE4809;
     font-weight:bold ;
 }
 
@@ -292,14 +288,9 @@ section{
 }
 
 .about .row .image{
-    flex:1 1 45rem;
+    flex:1 1 30rem;
 }
 
-.about .row .image img{
-    width: 100%;
-    margin-bottom: -3px;
-    border-radius: 0 15px 15px 0;
-}
 .about .row .content{
     flex:1 1 45rem;
     padding:2rem;
@@ -316,6 +307,71 @@ section{
     padding:1rem 0;
     line-height: 1.8;
 }
+  
+  .carousel {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    border-radius: 0 15px 15px 0;
+  }
+  
+  .carousel .carousel__item,
+  .carousel .carousel__item--hidden {
+    display: none;
+  }
+  
+  .carousel .carousel__item img {
+    width: 100%;
+
+    height: auto;
+    
+  }
+  
+  .carousel .carousel__item--visible {
+    display: block;
+    animation: fadeVisibility 0.5s;
+   
+  }
+  
+  .carousel .carousel__actions {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  
+  .carousel .carousel__actions button {
+    border-radius: 50px;
+    border: 0;
+    font-weight: bold;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+  }
+
+  .carousel .carousel__actions button:hover{
+      background-color:#e25c1e;
+  }
+  
+  .carousel .carousel__actions button#carousel__button--prev {
+    margin-left: 20px;
+  }
+  
+  .carousel .carousel__actions button#carousel__button--next {
+    margin-right: 20px;
+  }
+  
+  @keyframes fadeVisibility {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+      transform: opacity linear;
+    }
+  }
 
 .menu .box-container{
     display: grid;
