--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar">
         <a href="#home">home</a>
         <a href="#about">about</a>
-        <a href="#products">beers</a>
+        <a href="products">beers</a>
         <a href="#review">review</a>
         <a href="#contact">contact</a>
     </nav>
@@ -338,7 +338,7 @@
 
         <div class="box">
             <div class="quote-icon">
-                <i class="fas fa-check-double"></i>
+                <i class="far fa-address-card"></i>
             </div> 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
             <img src="images/pic-1.png" class="user" alt="">
@@ -355,7 +355,7 @@
 
         <div class="box">
             <div class="quote-icon">
-                <i class="fas fa-check-double"></i>
+                <i class="far fa-address-card"></i>
             </div> 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
             <img src="images/pic-1.png" class="user" alt="">
@@ -371,7 +371,7 @@
 
         <div class="box">
             <div class="quote-icon">
-                <i class="fas fa-check-double"></i>
+                <i class="far fa-address-card"></i>
             </div> 
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
@@ -388,7 +388,7 @@
 
         <div class="box">
             <div class="quote-icon">
-                <i class="fas fa-check-double"></i>
+                <i class="far fa-address-card"></i>
             </div> 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
             <img src="images/pic-1.png" class="user" alt="">
@@ -404,7 +404,7 @@
         
         <div class="box">
             <<div class="quote-icon">
-                <i class="fas fa-check-double"></i>
+                <i class="far fa-address-card"></i>
             </div> 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
             <img src="images/pic-1.png" class="user" alt="">
@@ -457,7 +457,7 @@
     <div class="links">
         <a href="#">home</a>
         <a href="#">about</a>
-        <a href="#">beers</a>
+        <a href="products">beers</a>
         <a href="#">review</a>
         <a href="#">contact</a>
     </div>
