--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,20 +126,23 @@ section{
     font-weight: bold;
 }
 
+.header .navbar i {
+    display: none;
+}
+
 .header .navbar a:hover{
     color:#CE4809;
     border-bottom: .1rem solid #CE4809;
     padding-bottom: .5rem;
 }
 
-.header .icons div{
+.header .icons button {
     color: var(--black);
     cursor: pointer;
     font-size: 2.5rem;
     margin-left: 2rem;
 }
-
-.header .icons div:hover{
+.header .icons button:hover{
     color:#CE4809;
 }
 
@@ -174,8 +177,6 @@ section{
     padding:1rem;
     text-transform: none;
     border-radius: 15px;
-    
-
 }
 
 .header .search-form label{
@@ -193,7 +194,7 @@ section{
     position: absolute;
     top:100%; right: -100%;
     height: calc(100vh - 9.5rem);
-    width: 35rem;
+    width: 45rem;
     background: #fff;
     padding:0 1.5rem;
 }
@@ -212,15 +213,50 @@ section{
 
 .header .cart-items-container .cart-item .fa-times{
     position: absolute;
-    top:1rem; right: 1rem;
+    top:1.2em; right: 2em;
     font-size: 2rem;
     cursor: pointer;
     color: var(--black);
 }
 
+.header .cart-items-container .cart-item .fa-minus-square{
+    position: absolute;
+    top: 1.2em; right: 8em;
+    font-size: 2rem;
+    cursor: pointer;
+    color: var(--black);
+}
+
+.header .cart-items-container .cart-item .fa-plus-square{
+    position: absolute;
+    top:1.2em; right: 4em;
+    font-size: 2rem;
+    cursor: pointer;
+    color: var(--black);
+}
+
+.header .cart-items-container .cart-item p{
+    position: absolute;
+    top: 1.8em; right: 9.7em;
+    font-size: 1.2rem;
+    color: var(--black);
+    border: 2px solid var(--black);
+    padding: 5px;
+    width: 25px;
+    text-align: center;
+}
+
 .header .cart-items-container .cart-item .fa-times:hover{
     color:#CE4809;
 }
+
+.header .cart-items-container .cart-item .fa-plus-square:hover{
+    color:#CE4809;  
+}
+.header .cart-items-container .cart-item .fa-minus-square:hover{
+    color:#CE4809;  
+}
+
 
 .header .cart-items-container .cart-item img{
     height: 7rem;
@@ -244,7 +280,111 @@ section{
     text-align: center;
 }
 
+.popup-overlay {
+    position:fixed;
+    top:0px;
+    left:0px;
+    width:100%;
+    height:100vh;
+    z-index:1;
+    background:rgba(0,0,0,0.5);
+    display:none;
+  }
+  .popup {
+    position:absolute;
+    bottom: 50%;
+    left:50%;
+    transform:translate(-50%,-50%) scale(1.15);
+    width:300px;
+    height:440px;
+    background:var(--main-color);
+    z-index:2;
+    opacity:0;
+    box-shadow:5px 5px 3px rgba(0,0,0,0.2);
+    transition:transform 300ms ease-in-out,opacity 300ms ease-in-out;
+    border-radius: 15px;
+  }
+  body.showLoginForm .popup-overlay {
+    display:block;
+  }
+  body.showLoginForm .popup {
+    top:600%;
+    opacity:1;
+    transform:translate(-50%,-50%) scale(1);
+  }
+  .popup .popup-close {
+    position:absolute;
+    top:-15px;
+    right:-15px;
+    width:40px;
+    height:40px;
+    background:#555;
+    color:#f5f5f5;
+    font-size:34px;
+    font-weight:600;
+    text-align: center;
+    border-radius:50%;
+    cursor:pointer;
+    z-index: 4;
+  }
+  .popup .form .avatar {
+    margin:90px 0px 20px;
+    text-align:center;
+  }
+  .popup .form .avatar img {
+    
+    width:120px;
+    border-radius:50%;
+  }
+  .popup .form .header {
+    text-align:center;
+    font-size:20px;
+    font-weight:600;
+    color:#222;
+    margin:20px 0px;
+  }
+  .popup .form .element {
+    padding:8px 20px;
+  }
+  .popup .form .element label {
+    display:block;
+    font-size:14px;
+    color:#222;
+    margin-bottom:5px;
+  }
 
+  .popup .form .element .username-label {
+      margin-top: -20px;
+  }
+  
+  .popup .form .element input {
+    width:100%;
+    padding:8px 10px;
+    box-sizing:border-box;
+    outline:none;
+    border:1px solid #aaa;
+    background:#eee;
+    border-radius:5px;
+  }
+  .popup .form .element button {
+    margin-top:5px;
+    width:100%;
+    padding:10px 0px;
+    text-transform:uppercase;
+    outline:none;
+    border:none;
+    font-size:15px;
+    font-weight:600;
+    border-radius:5px;
+    cursor:pointer;
+    background:#CE4809;
+    color:#f5f5f5;
+    text-align: center;
+  }
+
+  .popup .form .element button:hover {
+      letter-spacing: .7rem;
+  }
 
 .home{
     min-height: 100vh;
@@ -613,6 +753,10 @@ section{
     background:none;
 }
 
+.contact .row form .btn {
+    text-align: center;
+}
+
 
 .footer{
     background:var(--black);
@@ -632,11 +776,13 @@ section{
     font-size: 2rem;
     color:#fff;
     margin:.3rem;
+    transition: transform ease 500ms;
+    border-radius: 50%;
 }
 
 .footer .share a:hover{
     background-color: #CE4809;
-    border-radius: 15px;
+    transform: rotate(360deg);
 }
 
 .footer .links{
@@ -696,9 +842,10 @@ section{
     .header .navbar{
         position: absolute;
         top:100%; right: -100%;
-        background: #fff;
+        background: var(--main-color);
         width: 30rem;
         height: calc(100vh - 9.5rem);
+
     }
 
     .header .navbar.active{
@@ -708,9 +855,18 @@ section{
     .header .navbar a{
         color:var(--black);
         display: block;
-        margin:1.5rem;
+        margin:1rem;
         padding:.5rem;
         font-size: 2rem;
+    }
+
+    .header .navbar i {
+        display: inline-block;
+        position: relative;
+        bottom: 34px;
+        left: 150px;
+        font-size: 2em;
+        color: var(--black);
     }
 
     .header .search-form{
