--- a/views/index.html
+++ b/views/index.html
@@ -24,17 +24,43 @@
 
     <nav class="navbar">
         <a href="#home">home</a>
+        <i class="fas fa-home"></i>
         <a href="#about">about</a>
+        <i class="fas fa-question-circle"></i>
         <a href="products">beers</a>
-        <a href="#review">review</a>
+        <i class="fas fa-th-list"></i>
         <a href="#contact">contact</a>
+        <i class="fas fa-address-book"></i>
     </nav>
 
     <div class="icons">
-        <div class="fas fa-search-plus" id="search-btn"></div>
-        <div class="fas fa-shopping-cart" id="cart-btn"></div>
-        <div class="fas fa-bars" id="menu-btn"></div>
+        <button class="fas fa-search-plus" id="search-btn"></button>
+        <button class="fas fa-shopping-cart" id="cart-btn"></button>
+        <button class="fas fa-user-circle" id="user-btn" onclick="openLoginForm()"></button>
+        <button class="fas fa-bars" id="menu-btn"></button>
     </div>
+
+      <div class="popup-overlay"></div>
+      <div class="popup">
+        <div class="popup-close" onclick="closeLoginForm()">×</div>
+        <div class="form">
+          <div class="avatar">
+            <img src="images/pic-1.png" alt="">
+          </div>
+          <div class="header"> Account login </div>
+          <div class="element">
+            <label for="username" class="username-label">Username</label>
+            <input type="text" id="username">
+          </div>
+          <div class="element">
+            <label for="password">Password</label>
+            <input type="password" id="password">
+          </div>
+          <div class="element">
+            <button>Login</button>
+          </div>
+        </div>
+      </div>
 
     <div class="search-form">
         <input type="search" id="search-box" placeholder="search here...">
@@ -44,6 +70,9 @@
     <div class="cart-items-container">
         <div class="cart-item">
             <span class="fas fa-times"></span>
+            <span class="far fa-minus-square"></span>
+            <p>3</p>
+            <span class="far fa-plus-square"></span>
             <img src="images/cart-item1.jpg" alt="">
             <div class="content">
                 <h3>5 de Mayo Saga</h3>
@@ -52,6 +81,9 @@
         </div>
         <div class="cart-item">
             <span class="fas fa-times"></span>
+            <p>4</p>
+            <span class="far fa-minus-square"></span>
+            <span class="far fa-plus-square"></span>
             <img src="images/cart-item2.jpg" alt="">
             <div class="content">
                 <h3>Calavera Mexican Imperial Stout</h3>
@@ -60,6 +92,9 @@
         </div>
         <div class="cart-item">
             <span class="fas fa-times"></span>
+            <p>1</p>
+            <span class="far fa-minus-square"></span>
+            <span class="far fa-plus-square"></span>
             <img src="images/cart-item3.jpg" alt="">
             <div class="content">
                 <h3>Falling Piano Esa de Rojo</h3>
@@ -68,6 +103,9 @@
         </div>
         <div class="cart-item">
             <span class="fas fa-times"></span>
+            <p>6</p>
+            <span class="far fa-minus-square"></span>
+            <span class="far fa-plus-square"></span>
             <img src="images/cart-item4.jpg" alt="">
             <div class="content">
                 <h3>Tempus Doble Malta</h3>
@@ -75,6 +113,7 @@
             </div>
         </div>
         <a href="#" class="btn">Checkout</a>
+        <a href="#" class="btn">Clear Cart</a>
     </div>
 
     
@@ -458,7 +497,6 @@
         <a href="#">home</a>
         <a href="#">about</a>
         <a href="products">beers</a>
-        <a href="#">review</a>
         <a href="#">contact</a>
     </div>
 
