--- a/src/views/products.html
+++ b/src/views/products.html
@@ -14,8 +14,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/productsstyle.css" />
+    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="stylesheet" href="../../css/productsstyle.css" />
     <title>Craft-Brew</title>
   </head>
 
@@ -24,7 +24,7 @@
 
     <header class="header">
       <a href="/" class="logo">
-        <img src="images/logo.jpg" alt="" />
+        <img src="../images/logo.jpg" alt="" />
       </a>
 
       <nav class="navbar">
@@ -36,9 +36,9 @@
       </nav>
 
       <div class="icons">
-        <div class="fas fa-search-plus" id="search-btn"></div>
-        <div class="fas fa-shopping-cart" id="cart-btn"></div>
-        <div class="fas fa-bars" id="menu-btn"></div>
+        <button class="fas fa-search-plus" id="search-btn"></button>
+        <button class="fas fa-shopping-cart" id="cart-btn"></button>
+        <button class="fas fa-bars" id="menu-btn"></button>
       </div>
 
       <div class="search-form">
@@ -49,7 +49,7 @@
       <div class="cart-items-container">
         <div class="cart-item">
           <span class="fas fa-times"></span>
-          <img src="images/cart-item1.jpg" alt="" />
+          <img src="../images/cart-item1.jpg" alt="" />
           <div class="content">
             <h3>5 de Mayo Saga</h3>
             <div class="price">$56.00</div>
@@ -58,7 +58,7 @@
         </div>
         <div class="cart-item">
           <span class="fas fa-times"></span>
-          <img src="images/cart-item2.jpg" alt="" />
+          <img src="../images/cart-item2.jpg" alt="" />
           <div class="content">
             <h3>Calavera Mexican Imperial Stout</h3>
             <div class="price">$59.00</div>
@@ -66,7 +66,7 @@
         </div>
         <div class="cart-item">
           <span class="fas fa-times"></span>
-          <img src="images/cart-item3.jpg" alt="" />
+          <img src="../images/cart-item3.jpg" alt="" />
           <div class="content">
             <h3>Falling Piano Esa de Rojo</h3>
             <div class="price">$92.00</div>
@@ -74,7 +74,7 @@
         </div>
         <div class="cart-item">
           <span class="fas fa-times"></span>
-          <img src="images/cart-item4.jpg" alt="" />
+          <img src="../images/cart-item4.jpg" alt="" />
           <div class="content">
             <h3>Tempus Doble Malta</h3>
             <div class="price">$40.00</div>
@@ -105,7 +105,7 @@
     </section>
 
     <!-- acaba footer -->
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 
 
   </body>
