--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,7 +110,7 @@ section{
     border-bottom: #CE4809;
     position: fixed;
     top:0; left: 0; right: 0; left: 0;
-    z-index: 1;
+    z-index: 5;
     
 }
 
@@ -141,6 +141,7 @@ section{
     cursor: pointer;
     font-size: 2.5rem;
     margin-left: 2rem;
+    background-color: var(--main-color);
 }
 .header .icons button:hover{
     color:#CE4809;
