--- a/src/views/index.html
+++ b/src/views/index.html
@@ -24,11 +24,11 @@
     </a>
 
     <nav class="navbar">
-        <a href="#home">home</a>
+        <a href="/">home</a>
         <i class="fas fa-home"></i>
-        <a href="#about">about</a>
+        <a href="about">about</a>
         <i class="fas fa-question-circle"></i>
-        <a href="products">beers</a>
+        <a href="product">beers</a>
         <i class="fas fa-th-list"></i>
         <a href="#contact">contact</a>
         <i class="fas fa-address-book"></i>
@@ -136,7 +136,7 @@
     <div class="content">
         <h3>Craft beer has never been so<br/><span class="typed"></span></h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, maxime? Lorem, ipsum dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, expedita?</p>
-        <a href="#" class="btn">get yours now</a>
+        <a href="product" class="btn">get yours now</a>
     </div>
 </section>
 
@@ -495,9 +495,9 @@
 
 <section class="footer">
     <div class="links">
-        <a href="#">home</a>
-        <a href="#">about</a>
-        <a href="products">beers</a>
+        <a href="/">home</a>
+        <a href="about">about</a>
+        <a href="product">beers</a>
         <a href="#">contact</a>
     </div>
 
