Added details and more progress on the about page

--- a/src/views/about.html
+++ b/src/views/about.html
@@ -54,7 +54,6 @@
             <h3>5 de Mayo Saga</h3>
             <div class="price">$56.00</div>
           </div>
-          
         </div>
         <div class="cart-item">
           <span class="fas fa-times"></span>
@@ -85,27 +84,86 @@
     </header>
     <!-- fin de header-->
     <main>
-        <div class="carousel">
-            <div class="viewport">
-                <div class="slide-container">
-                  <div class="slide-3">
-                  </div>
-                </div>
-                <div class="slide-container">
-                  <div class="slide-2">
-                  </div>
-                </div>
-                <div class="slide-container">
-                  <div class="slide-1">
-                  </div>
-                </div>
-            </div>
+      <div class="carousel">
+        <div class="viewport">
+          <div class="slide-container">
+            <div class="slide-3"></div>
+          </div>
+          <div class="slide-container">
+            <div class="slide-2"></div>
+          </div>
+          <div class="slide-container">
+            <div class="slide-1"></div>
+          </div>
         </div>
-        <div class="carousel-text">
-            <h1>ABOUT US</h1>
-        </div>
+      </div>
+      <div class="carousel-text">
+        <h1>ABOUT US</h1>
+      </div>
     </main>
 
+    <section class="about-text">
+      <h1 class="heading"><span>How We</span> Started</h1>
+
+      <div class="row">
+        <div class="content-image">
+            <img src="../images/about-img2.jpg" height="100%" width="100%">
+        </div>
+
+        <div class="content">
+            <h2>Every story has a beginning</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Reprehenderit laudantium officiis suscipit quas. Placeat vel tempore
+            minus atque? Officia debitis excepturi odit fuga numquam vero,
+            assumenda delectus error eveniet, asperiores, qui ut doloremque
+            recusandae placeat consectetur velit maiores magnam. Soluta dolorum
+            laudantium hic odio incidunt reiciendis ullam, officiis maxime
+            aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Voluptati bus qui ea ullam, enim tempora ipsum fuga alias quae
+            ratione a officiis id temporibus autem? Quod nemo facilis
+            cupiditate. Ex, vel?
+          </p>
+          <a href="#" class="btn">learn more</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="about-cicle">
+      <h1 class="heading"><span>How It's</span> Made</h1>
+
+      <div class="row">
+
+        <div class="box-container">
+          <div class="box">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+              nulla sit libero nemo fuga sequi nobis? Necessitatibus aut
+              laborum, nisi quas eaque laudantium consequuntur iste ex aliquam
+              minus vel? Nemo.
+            </p>
+          </div>
+          
+          <div class="box">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+              nulla sit libero nemo fuga sequi nobis? Necessitatibus aut
+              laborum, nisi quas eaque laudantium consequuntur iste ex aliquam
+              minus vel? Nemo.
+            </p>
+          </div>
+
+          <div class="box">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                nulla sit libero nemo fuga sequi nobis? Necessitatibus aut
+                laborum, nisi quas eaque laudantium consequuntur iste ex aliquam
+                minus vel? Nemo.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- fcomienza footer  -->
 
@@ -127,7 +185,5 @@
 
     <!-- acaba footer -->
     <script src="../js/script.js"></script>
-
-
   </body>
 </html>
