--- a/public/css/aboutstyle.css
+++ b/public/css/aboutstyle.css
@@ -1,3 +1,10 @@
+:root{
+    --main-color:#E9EBDE;
+        --black:#13131a;
+        --bg:#010103;
+        --border:.1rem solid rgba(255,255,255,.3);
+    }
+
 .carousel {
     width: 100%;
     height: 70vh;
@@ -88,9 +95,141 @@ main .carousel-text{
     z-index: 3;
     width: 250px;
     height: 25px;
-    border-radius: 15px;
     font-size:1.7rem;
 }
+
+.about-text .heading{
+    text-align: start;
+    color:#CE4809;
+    text-transform: uppercase;
+    padding-bottom: 3.5rem;
+    padding-top: 1em;
+    font-size: 4rem;
+    margin-top: 1em;
+    border-top: 1px solid rgba(34, 34, 34, 0.589);
+}
+
+.about-text .heading span{
+    color:var(--main-color);
+    text-transform: uppercase;
+}
+
+.about-cicle .heading{
+    text-align: center;
+    color:#CE4809;
+    text-transform: uppercase;
+    padding-bottom: 3.5rem;
+    padding-top: 1em;
+    font-size: 4rem;
+    margin-top: 1em;
+    border-top: 1px solid rgba(34, 34, 34, 0.589);
+}
+
+.about-cicle .heading span{
+    color:var(--main-color);
+    text-transform: uppercase;
+}
+
+.about-text .row {
+    display: flex;
+    flex-direction: column;
+}
+
+.about-text .row .content p {
+    font-size: 1.6rem;
+    color:#ccc;
+    padding:1rem 0;
+    line-height: 1.8;
+}
+
+.about-text .row .content h2 {
+    font-size: 2rem;
+    color:#ccc;
+    padding:1rem 0;
+    line-height: 1.8;
+}
+
+.about-text .row .content-image {
+    width: 100%;
+}
+
+.about-text .row .content {
+    width: 100%;
+    background-color: var(--black);
+    border-radius: 0 15px 15px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 25px;
+}
+
+.about-cicle .row { 
+    display: flex;
+    align-items: flex-start;
+    background:var(--black);
+    flex-wrap: wrap;
+    border-radius: 9px;
+    justify-content: center;
+    padding:15px;
+}
+
+.about-cicle .row .content {
+    width: 60%;
+    height: 10vh;
+}
+
+.about-cicle .row .content p {
+    font-size: 1.6rem;
+    color:#ccc;
+    padding:1rem 0;
+    line-height: 1.8;
+    
+}
+
+ .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap:1.5rem;
+    padding: 50px;
+}
+
+.box-container .box{
+    border:var(--border);
+    text-align: center;
+    padding:4rem 3rem;
+    background:rgba(71, 71, 71, 0.473);
+    transition: all .2s ease-in-out;
+    margin:20px;
+}
+
+.box-container .box:hover {
+    transform: scale(1.05);
+}
+
+.box-container .box p{
+    font-size: 1.5rem;
+    line-height: 1.8;
+    color:#ccc;
+    padding:2rem 0;
+}
+
+@media  screen and (min-width:1014px){
+    .about-text .row {
+        
+        flex-direction: row;
+    }
+
+    .about-text .row .content {
+        border-radius: none;
+    }
+}
+
+
+
+
+
+
 
 @media screen and (min-width:451px){
     main .carousel-text h1{
