--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -22,66 +22,7 @@
   <body>
     <!-- hecomienza header -->
 
-    <header class="header">
-      <a href="/" class="logo">
-        <img src="../images/logo.jpg" alt="" />
-      </a>
-
-      <nav class="navbar">
-        <a href="/">home</a>
-        <a href="#about">about</a>
-        <a href="products">beers</a>
-        <a href="#review">review</a>
-        <a href="#contact">contact</a>
-      </nav>
-
-      <div class="icons">
-        <button class="fas fa-search-plus" id="search-btn"></button>
-        <button class="fas fa-shopping-cart" id="cart-btn"></button>
-        <button class="fas fa-bars" id="menu-btn"></button>
-      </div>
-
-      <div class="search-form">
-        <input type="search" id="search-box" placeholder="search here..." />
-        <label for="search-box" class="fas fa-search"></label>
-      </div>
-
-      <div class="cart-items-container">
-        <div class="cart-item">
-          <span class="fas fa-times"></span>
-          <img src="../images/cart-item1.jpg" alt="" />
-          <div class="content">
-            <h3>5 de Mayo Saga</h3>
-            <div class="price">$56.00</div>
-          </div>
-        </div>
-        <div class="cart-item">
-          <span class="fas fa-times"></span>
-          <img src="../images/cart-item2.jpg" alt="" />
-          <div class="content">
-            <h3>Calavera Mexican Imperial Stout</h3>
-            <div class="price">$59.00</div>
-          </div>
-        </div>
-        <div class="cart-item">
-          <span class="fas fa-times"></span>
-          <img src="../images/cart-item3.jpg" alt="" />
-          <div class="content">
-            <h3>Falling Piano Esa de Rojo</h3>
-            <div class="price">$92.00</div>
-          </div>
-        </div>
-        <div class="cart-item">
-          <span class="fas fa-times"></span>
-          <img src="../images/cart-item4.jpg" alt="" />
-          <div class="content">
-            <h3>Tempus Doble Malta</h3>
-            <div class="price">$40.00</div>
-          </div>
-        </div>
-        <a href="#" class="btn">Checkout</a>
-      </div>
-    </header>
+    <%- include('./partials/navbar')%>
     <!-- fin de header-->
     <main>
       <div class="carousel">
@@ -167,21 +108,7 @@
 
     <!-- fcomienza footer  -->
 
-    <section class="footer">
-      <div class="links">
-        <a href="/">home</a>
-        <a href="about">about</a>
-        <a href="products">beers</a>
-        <a href="#">review</a>
-        <a href="#">contact</a>
-      </div>
-
-      <div class="share">
-        <a href="#" class="fab fa-facebook-f"></a>
-        <a href="#" class="fab fa-twitter"></a>
-        <a href="#" class="fab fa-instagram"></a>
-      </div>
-    </section>
+    <%- include('./partials/footer') %>
 
     <!-- acaba footer -->
     <script src="../js/script.js"></script>
