--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -46,7 +46,7 @@
             <h3>what makes a beer special?</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus qui ea ullam, enim tempora ipsum fuga alias quae ratione a officiis id temporibus autem? Quod nemo facilis cupiditate. Ex, vel?</p>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit amet enim quod veritatis, nihil voluptas culpa! Neque consectetur obcaecati sapiente?</p>
-            <a href="#" class="btn">learn more</a>
+            <a href="/about" class="btn">learn more</a>
         </div>
 
         <div class="image">
@@ -89,6 +89,7 @@
             <h4><%= cerveza.tipo%></h4>
             <div class="price"><%= cerveza.precio%></div>
             <a href="#" class="btn">add to cart</a>
+            <a href="/product/<%= cerveza.id%>" class="btn">more info</a>
         
         </div>
         <% } %>   
